--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node": "0.0.0",
     "sinon": "^1.17.4",
     "tslint": "^3.13.0",
-    "typedoc": "^0.4.5",
+    "typedoc": "^0.5.0",
     "typedoc-dash-theme": "^1.1.0",
     "typescript": "^1.8.0",
     "typings": "^1.3.1"
@@ -42,6 +42,7 @@
     "express": "^4.14.0",
     "fast-stats": "0.0.3",
     "gulp-istanbul": "^1.1.1",
+    "gulp-sourcemaps": "^1.7.2",
     "gulp-tslint": "^6.1.2",
     "gulp-typescript": "^2.14.1",
     "jsonwebtoken": "^7.1.9",
