--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "reflect-metadata": "^0.1.3",
     "rx": "^4.1.0",
     "statsd-client": "^0.2.2",
-    "unirest": "^0.5.0"
+    "unirest": "^0.5.0",
+    "validator": "^6.1.0"
   }
 }
